# vasp-tools

./: Cargo.toml  Makefile.toml
src/: cli.rs  incar.rs  interactive.rs  ipi.rs  lib.rs  main.rs  plot.rs  process.rs  server.rs  session.rs  session_new.rs  socket.rs  task.rs  vasp.rs
src/ipi/: codec.rs
src/vasp/: freq.rs
tests/files/: INCAR  interactive.txt
tests/files/live-vasp/: .env  INCAR  KPOINTS  POSCAR  POTCAR  input.tera  submit.sh
