# [[file:vasp-tools.note::*cargo.toml][cargo.toml:1]]
[package]
name = "vasp-tools"
version = "0.0.7"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
gosh = { version = ">=0.0.1", features=["adhoc"] }
nix = "0.19"
bstr = "0.2"
fs2 = "0.4"
bytes = "1"
structopt = "0.3"
tempfile = "3.0"
duct = "0.13"
psutil = "3"
envfile = "0.2"
chrono = "0.4"
gut = { version = "0.1.5", package = "gchemol-gut" }
text_parser = { version = "0.2", package = "gchemol-parser" }
rexpect = "0.4"
libc = "0.2"
shared_child = "0.3"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]

[features]
# for adhoc hacking
adhoc = []
# cargo.toml:1 ends here
