# [[file:vasp-tools.note::58b3211f][58b3211f]]
[package]
name = "vasp-tools"
version = "0.0.16"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
gosh = { version = "=0.0.30", features=["adhoc"] }
# nix = "0.19"
bstr = "0.2"
bytes = "1"
structopt = "0.3"
tempfile = "3.0"
duct = "0.13"
envfile = "0.2"
chrono = "0.4"
vecfx = "0.1"
approx = "0.5"
gut = { version = "0.1.5", package = "gchemol-gut" }
text_parser = { version = "0.3.0", package = "gchemol-parser" }
# rexpect = "0.4"
# libc = "0.2"
# shared_child = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"

[dev-dependencies]

[features]
# for adhoc hacking
adhoc = []
# 58b3211f ends here
